manifests/workloads/excalidraw/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: excalidraw
  name: excalidraw
