manifests/workloads/excalidraw/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: excalidraw
  name: excalidraw
spec:
  progressDeadlineSeconds: 30
  replicas: 3
  selector:
    matchLabels:
      run: excalidraw
  strategy:
    rollingUpdate:
      maxUnavailable: 33%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: excalidraw
    spec:
      containers:
      - image: excalidraw-image
        imagePullPolicy: Always
        name: excalidraw
        resources:
          limits:
            cpu: "1"
            memory: 250Mi
          requests:
            cpu: 500m
            memory: 96Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 3
