manifests/workloads/excalidraw/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  labels:
    app.kubernetes.io/instance: excalidraw
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: excalidraw
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: www-danmanners-com-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whiteboard.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: excalidraw
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  selector:
    run: excalidraw
  sessionAffinity: None
