manifests/workloads/excalidraw/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-web
  namespace: excalidraw
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whiteboard.danmanners.com`)
      kind: Rule
      services:
        - name: excalidraw
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: Host(`danmanners.com`)
      kind: Rule
      services:
        - name: excalidraw
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-websecure
  namespace: excalidraw
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whiteboard.danmanners.com`)
      kind: Rule
      services:
        - name: excalidraw
          port: 8080
  tls:
    secretName: excalidraw
